--- a/config/atg/dynamo/service/jaxrs/JerseyClassLoaderService.properties
+++ b/config/atg/dynamo/service/jaxrs/JerseyClassLoaderService.properties
@@ -1,6 +1,8 @@
 childFirstPrefixes+=\
 	atg/commerce/foo/restresources,\
-	com/oms/services
+	com/oms/services,\
+	com/endeca/InvokeAssembler,\
+	
 
 classpathFiles+=\
  {appModuleResource?moduleID=DemoAtgModule&resourceURI=lib/classes.jar}
