--- a/config/atg/dynamo/service/jaxrs/RestResourceRegistry.properties
+++ b/config/atg/dynamo/service/jaxrs/RestResourceRegistry.properties
@@ -1,7 +1,9 @@
 nucleusRestResources+=\
   /com/test/CurrentOrderRestResource,\
   /com/test/UpdateShippingGroupService,\
-  /com/test/TrackingInfo
+  /com/test/TrackingInfo,\
+  /com/test/EndecaEndpointResource
+  
   
 #nucleusProviders+=/atg/dynamo/service/jaxrs/security/CsrfProtectionFilter
 #contextRoot=/liverpool/v1
