added code Changees

--- a/config/atg/dynamo/service/jaxrs/JerseyClassLoaderService.properties
+++ b/config/atg/dynamo/service/jaxrs/JerseyClassLoaderService.properties
@@ -1,7 +1,7 @@
 childFirstPrefixes+=\
 	atg/commerce/foo/restresources,\
 	com/oms/services,\
-	com/endeca/InvokeAssembler,\
+	com/endeca/InvokeAssembler
 	
 
 classpathFiles+=\
