--- a/config/atg/dynamo/service/jaxrs/RestResourceRegistry.properties
+++ b/config/atg/dynamo/service/jaxrs/RestResourceRegistry.properties
@@ -2,7 +2,8 @@ nucleusRestResources+=\
   /com/test/CurrentOrderRestResource,\
   /com/test/UpdateShippingGroupService,\
   /com/test/TrackingInfo,\
-  /com/test/EndecaEndpointResource
+  /com/test/EndecaEndpointResource,\
+  /com/training/InvokeAssembler
   
   
 #nucleusProviders+=/atg/dynamo/service/jaxrs/security/CsrfProtectionFilter
