--- a/config/atg/dynamo/service/jaxrs/RestResourceRegistry.properties
+++ b/config/atg/dynamo/service/jaxrs/RestResourceRegistry.properties
@@ -3,7 +3,8 @@ nucleusRestResources+=\
   /com/test/UpdateShippingGroupService,\
   /com/test/TrackingInfo,\
   /com/test/EndecaEndpointResource,\
-  /com/training/InvokeAssembler
+  /com/training/InvokeAssembler,\
+  /com/training/order/UpdateOrderService
   
   
 #nucleusProviders+=/atg/dynamo/service/jaxrs/security/CsrfProtectionFilter
