added code for invoking droplet via rest service

--- a/config/atg/rest/registry/ActorChainRestRegistry.properties
+++ b/config/atg/rest/registry/ActorChainRestRegistry.properties
@@ -3,4 +3,7 @@ registeredUrls+=\
 /com/training/UpdateTrackingActor/updateOrder,\
 /com/training/UpdateTrackingActor/update-error,\
 /com/training/UpdateTrackingActor/update-success,\
-/com/test/TestMvcComponents/findAddress1
+/com/test/TestMvcComponents/findAddress1,\
+/atg/rest/SessionConfirmationActor,\
+/com/test/OrderLookupCustom,\
+/com/test/StoreLookupActorChain
