--- a/build.properties
+++ b/build.properties
@@ -11,4 +11,5 @@ jboss-server-deployment.dir=/home/oracle/eclipse-workspace
 server-name=atg_production_lockserver
 module.name=DemoAtgModule
 module-list=DafEar.Admin,DPS,DSS,ContentMgmt,DCS.PublishingAgent,DCS.AbandonedOrderServices,ContentMgmt.Endeca.Index,DCS.Endeca.Index,DCS.Endeca.Assembler,Store.Endeca.Index,Store.Endeca.Assembler,DAF.Endeca.Assembler,Store.WCSExtensions,Store.WCSExtensions.Endeca.Index,Store.Storefront,Store.EStore.International,Store.Mobile,Store.Endeca.International,Store.WCSExtensions.International,Store.WCSExtensions.Endeca.International,Store.Storefront.NoPublishing,Store.Fulfillment,Store.Mobile.REST,Store.Mobile.International,PublishingAgent,REST.base,REST.Actor,REST.JAXRSPublic.Version1,Store.Storefront.NoPublishing.International,DemoAtgModule
+#module-list=DafEar.Admin,DPS,DSS,DemoAtgModule
 server-layer=EndecaPreview
