--- a/config/com/training/UpdateTrackingInformationFormHandler.properties
+++ b/config/com/training/UpdateTrackingInformationFormHandler.properties
@@ -1,2 +1,11 @@
 $class=com.custom.formhandler.UpdateTrackingInfoFormHandler
 $scope=request
+loggingDebug=true
+successUrl=/test/test.jsp
+url=/test/test.jsp,\
+	/profile/profile.jsp,\
+	/order/order.jsp
+urlMap=,\
+order=/atg/commerce/order/OrderTools,\
+profile=/atg/userprofiling/ProfileTools,\
+person=/com/training/Person
