--- a/config/com/training/order/UpdateOrderService.properties
+++ b/config/com/training/order/UpdateOrderService.properties
@@ -1,3 +1,4 @@
 $class=com.custom.order.service.UpdateOrderService
 $classloader=/atg/dynamo/service/jaxrs/JerseyClassLoaderService
 orderManager=/atg/commerce/order/OrderManager
+$scope=request
